--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
             "email": "eirik@morland.no"
         }
     ],
-    "require": {}
+    "require": {
+      "composer-plugin-api": "^1.1"
+    },
+    "extra": {
+      "class": "Violinist\\CachedRemoteFilesystem"
+    }
 }
