--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
       "composer-plugin-api": "^1.1"
     },
     "extra": {
-      "class": "Violinist\\CachedRemoteFilesystem"
+      "class": "Violinist\\CachedRemoteFilesystem\\EventSubscriber"
     },
     "require-dev": {
         "composer/composer": "dev-master"
