--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "require": {
     "composer-plugin-api": "^1.1 || ^2",
-    "symfony/cache": "^3.4"
+    "symfony/cache": "^3.4 || ^4 || ^5 || ^6"
   },
   "extra": {
     "class": "Violinist\\CachedRemoteFilesystem\\EventSubscriber"
