--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
   },
   "require": {
     "composer-plugin-api": "^1.1 || ^2",
+    "phpstan/phpstan": "^1.0",
     "symfony/cache": "^3.4"
   },
   "extra": {
