--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
       "Violinist\\CachedRemoteFilesystem\\": "src"
     }
   },
+  "script": {
+    "test": "composer phpstan",
+    "phpstan": "phpstan analyse src"
+  }
   "require": {
     "composer-plugin-api": "^1.1 || ^2",
     "phpstan/phpstan": "^1.0",
