--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Install dependencies
         run: composer --verbose install
 
+      - name: Symlink phpstan config
+        run: ln -s phpstan-${{ matrix.composer-version }}.neon phpstan.neon
+
       - name: Run tests
         run: composer test
         env:
