--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,16 @@
       "Violinist\\CachedRemoteFilesystem\\": "src"
     }
   },
+  "scripts": {
+    "test": "composer phpstan",
+    "phpstan": "phpstan analyse src"
+  },
   "require": {
     "composer-plugin-api": "^1.1 || ^2",
+    "phpstan/phpstan": "^1.0",
     "symfony/cache": "^3.4"
   },
   "extra": {
     "class": "Violinist\\CachedRemoteFilesystem\\EventSubscriber"
-  },
-  "require-dev": {
-    "composer/composer": "dev-master"
   }
 }
