--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "require": {
     "composer-plugin-api": "^1.1 || ^2",
     "phpstan/phpstan": "^1.0",
-    "symfony/cache": "^3.4 || ^4 || ^5 || ^6"
+    "symfony/cache": "^3.4 || ^4 || ^5 || ^6 || ^7"
   },
   "extra": {
     "class": "Violinist\\CachedRemoteFilesystem\\EventSubscriber"
